Task #6 - Only have a date stamp in the footer for HTML output, make sure it's in the same timezone as what's added for the revdate. * Fixes #6 - override the docdate and doctime so it matches the revdate in the header

--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,8 @@
                 <configuration>
                     <attributes>
                         <author>${project.organization.name}</author>
+                        <docdate>${maven.build.timestamp}</docdate>
+                        <doctime />
                         <icons>font</icons>
                         <organization>${project.organization.name}</organization>
                         <revnumber>${project.version}</revnumber>
