--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -18,4 +18,5 @@ jobs:
         java-version: '11.0.5'
         java-package: jdk
         architecture: x64
+    - name: package
       run: mvn --file pom.xml
