Task #13 - Update the metadata info for the PDF output, including the page dimensions * added theme file to control the page layout, size and margins * added plugin config to use the theme and set the PDF version

--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,11 @@
                             <goal>process-asciidoc</goal>
                         </goals>
                         <configuration>
+                            <attributes>
+                                <pdf-theme>railtoto</pdf-theme>
+                                <pdf-themesdir>${project.basedir}/src/main/resources/themes</pdf-themesdir>
+                                <pdf-version>1.7</pdf-version>
+                            </attributes>
                             <backend>pdf</backend>
                             <doctype>book</doctype>
                             <outputDirectory>target/generated-docs/${project.version}/pdf</outputDirectory>
