* added dependencies needed to render an org chart * skip producing a jar artifact from the build * added some more references to the bibliography * fixed title levels on each section * added terms to the glossary * added a new file describing the railroad organization * change the PDF margins to 0.75in

--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,7 @@
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>2.4</version>
                 <configuration>
-                    <skipIfEmpty>true</skipIfEmpty>
+                    <skip>true</skip>
                 </configuration>
             </plugin>
             <plugin>
@@ -86,13 +86,22 @@
                         <organization>${project.organization.name}</organization>
                         <revnumber>${project.version}</revnumber>
                         <revdate>${maven.build.timestamp}</revdate>
+                        <graphvizdot>/usr/bin/dot</graphvizdot>
                     </attributes>
+                    <requires>
+                        <require>asciidoctor-diagram</require>
+                    </requires>
                 </configuration>
                 <dependencies>
                     <dependency>
                         <groupId>org.asciidoctor</groupId>
                         <artifactId>asciidoctorj-pdf</artifactId>
                         <version>1.5.3</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.asciidoctor</groupId>
+                        <artifactId>asciidoctorj-diagram</artifactId>
+                        <version>2.0.2</version>
                     </dependency>
                 </dependencies>
                 <executions>
@@ -108,10 +117,13 @@
                                 <pdf-theme>railtoto</pdf-theme>
                                 <pdf-themesdir>${project.basedir}/src/main/resources/themes</pdf-themesdir>
                                 <pdf-version>1.7</pdf-version>
+                                <!-- Below 2 lines make the images work in PDFs -->
+                                <imagesoutdir>${project.build.directory}/generated-docs/${project.version}/pdf/images</imagesoutdir>
+                                <imagesdir>${project.build.directory}/generated-docs/${project.version}/pdf/images</imagesdir>
                             </attributes>
                             <backend>pdf</backend>
                             <doctype>book</doctype>
-                            <outputDirectory>target/generated-docs/${project.version}/pdf</outputDirectory>
+                            <outputDirectory>${project.build.directory}/generated-docs/${project.version}/pdf</outputDirectory>
                             <outputFile>${project.build.finalName}.pdf</outputFile>
                             <sourceDocumentName>index.adoc</sourceDocumentName>
                         </configuration>
@@ -125,9 +137,11 @@
                         <configuration>
                             <attributes>
                                 <toc>left</toc>
+                                <imagesoutdir>${project.build.directory}/generated-docs/${project.version}/html/images</imagesoutdir>
+                                <imagesdir>${project.build.directory}/generated-docs/${project.version}/html/images</imagesdir>
                             </attributes>
                             <backend>html5</backend>
-                            <outputDirectory>target/generated-docs/${project.version}/html</outputDirectory>
+                            <outputDirectory>${project.build.directory}/generated-docs/${project.version}/html</outputDirectory>
                         </configuration>
                     </execution>
                 </executions>
